--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "buffer": "^6.0.3",
     "cors": "^2.8.5",
     "express": "^4.21.2",
+    "lottie-react-native": "^7.2.2",
     "openai": "^4.82.0",
     "react": "19.0.0",
     "react-native": "0.78.0",
